--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+et-xmlfile==1.0.1
 Fiona==1.8.18
 fsspec==0.8.5
 ftfy==5.9
@@ -49,6 +50,7 @@ nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
 numpy==1.20.1
+openpyxl==3.0.7
 packaging==20.9
 pandas==1.2.2
 pandocfilters==1.4.3
@@ -96,4 +98,5 @@ urllib3==1.26.3
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+xlrd==2.0.1
 zipp==3.4.0
